tests/test_files/errors/fuzz12.over
g: -04
pos: +4.0
neg_zero: -0.
pos_zero: +.0

frac_from_dec: 0%0*30
neg_ffd: -1.3001111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111110000000000000000000000000000000000000000004000*000000000
